--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ try {
 </div>
 <table class="imgtable"><tr><td>
 <img src="./rabbit.jpeg" alt="photo" width="150px" height="200px" />&nbsp;</td>
-<td align="left"><p>Yiwei Liao <span lang="zh-cn" xml:lang="zh-cn">(ÁÎÒåÎ°)</span> <br />
+<td align="left"><p>Yiwei Liao <span lang="zh-cn" xml:lang="zh-cn">(å»–ä¹‰ä¼Ÿ)</span> <br />
 
 Postdoc, <br />
-<a href="sds.cuhk.edu.cn" target=&ldquo;blank&rdquo;>School of Data Science</a>, <br />
+<a href="https://www.sds.cuhk.edu.cn" target=&ldquo;blank&rdquo;>School of Data Science</a>, <br />
 <a href="https://www.cuhk.edu.cn" target=&ldquo;blank&rdquo;>The Chineses University of Hong Kong, Shenzhen</a>
 </p>
 <p><br /> 
@@ -108,7 +108,7 @@ Postdoc, <br />
 <tr class="r1"><td class="c1">country </td><td class="c2"> population </td><td class="c3"> people per square km </td></tr>
 <tr class="r2"><td class="c1">Canada </td><td class="c2"> 33 million </td><td class="c3"> 3.2 </td></tr>
 <tr class="r3"><td class="c1">
-<span lang="zh-Hans">ÖĞ»ªÈËÃñ¹²ºÍ¹ú</span><br /> </td><td class="c2"> 1300 million </td><td class="c2"> 140 </td></tr>
+<span lang="zh-Hans">ä¸­åäººæ°‘å…±å’Œå›½</span><br /> </td><td class="c2"> 1300 million </td><td class="c2"> 140 </td></tr>
 <tr class="r5"><td class="c1">Kingdom of Denmark </td><td class="c2"> 5.5 million </td><td class="c3"> 130 </td></tr>
 <tr class="r6"><td class="c1">New Zealand </td><td class="c2"> 4.3 million </td><td class="c3"> 15 </td></tr>
 <tr class="r7"><td class="c1">United States of America </td><td class="c2"> 300 million </td><td class="c3"> 31
